# EMBOCON_Interfaces

./: .gitignore  README.md
Examples/: README.md
Examples/GEMS/Model_CraneExample/: .project  EMBOCON_DataTypes.c  README.md
Examples/GEMS/Observer_CraneExample/: .cproject  .project  EMBOCON_ObserverInterface.c  README.md
Examples/GEMS/Optimizer_CraneExample_Acado/: .cproject  .project  EMBOCON_OptimizerInterface.c  EMBOCON_OptimizerInterface.h  README.md
Examples/GEMS/Optimizer_CraneExample_CASADI_IPOPT/: .cproject  .project  CASADI.cpp  CASADI.h  EMBOCON_ModelInterface.c  EMBOCON_OptimizerInterface.c  EMBOCON_OptimizerInterface.h  README.md
Examples/GEMS/Optimizer_CraneExample_FORCES/: .cproject  .project  EMBOCON_ModelInterface.c  EMBOCON_OptimizerInterface.c  README.md  myMPC.c  myMPC.h
Examples/GEMS/Simulation_CraneExample_SUNDIALS/: .cproject  .project  EMBOCON_DataTypes.c  EMBOCON_SimulationApplicationInterface.c  README.md
Examples/crane_acado/: CMakeLists.txt  README.md  SGems_SFunc.c  crane.mdl  crane_nmpc_generator.cpp  mexfiles.m  optimizer.c
Examples/crane_acado/crane_nmpc_export/: acado.h  (+3 more)
Examples/crane_forces/: README.md  crane.mdl  myMPC.c
Examples/crane_fpga/: FPGAcontroller_library.c  FPGAcontroller_library.h  README.md  README.txt  SGems_SFunc.tlc  crane.mdl  mexfiles.m
Examples/crane_mpt/: README.md  README.txt  SGems.c  craneData.m  crane_mpt_design.m
Examples/crane_qpoases/: CMakeLists.txt  README.md  crane_mpc_generator.cpp  initialize.m  mexfiles.m  optimizer.c
Examples/crane_qpoases/crane_mpc_export/: acado.h  integrator.c
Examples/kite_acado/: README.md  RefTraj.txt  SGems.c  SGems_SFunc.c  SGems_SFunc_bus.h  kiteModel.m  kite_nmpc_generator.cpp  observer.c  optimizer.c
Model/: .cproject  .project
Model/Debug/: makefile  subdir.mk
Observer/: .project  EMBOCON_ModelInterface.c  EMBOCON_ObserverInterface.c
Observer/Debug/: EMBOCON_ModelInterface.d  EMBOCON_ObserverInterface.d  makefile
Optimizer/: .cproject  .project  EMBOCON_ModelInterface.c  EMBOCON_OptimizerInterface.c  EMBOCON_OptimizerInterface.h
Optimizer/Debug/: EMBOCON_OptimizerInterface.d  makefile  subdir.mk
Simulation/: .cproject  .project  EMBOCON_SimulationApplicationInterface.c  EMBOCON_SimulationApplicationInterface.h
Simulation/Debug/: EMBOCON_DataTypes.d  EMBOCON_SimulationApplicationInterface.d  makefile  subdir.mk
(+228 files in other folders)
